[package]
name = "jf-primitives"
description = "Cryptographic primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = "1.0"
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-bw6-761 = { workspace = true }
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
        "sponge",
] }
ark-ec = { workspace = true }
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
ark-ff = { workspace = true }
ark-pallas = "0.4.0"
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
blst = { version = "0.3.11", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
        "alloc",
        "rand_core",
] }
crypto_kx = { version = "0.2.1", features = ["serde"] }
derivative = { workspace = true }
digest = { version = "0.10.1", default-features = false, features = ["alloc"] }
displaydoc = { workspace = true }
espresso-systems-common = { git = "https://github.com/espressosystems/espresso-systems-common", tag = "0.4.0" }
generic-array = { version = "0", features = [
        "serde",
] } # not a direct dependency, but we need serde
icicle-bls12-377 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v1.5.0", optional = true, features = ["arkworks"] }
icicle-bls12-381 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v1.5.0", optional = true, features = ["arkworks"] }
icicle-bn254 = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v1.5.0", optional = true, features = ["arkworks"] }
icicle-core = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v1.5.0", optional = true }
icicle-cuda-runtime = { git = "https://github.com/ingonyama-zk/icicle.git", tag = "v1.5.0", optional = true }
itertools = { workspace = true, features = ["use_alloc"] }
jf-merkle-tree = { path = "../merkle_tree", default-features = false }
jf-primitives-core = { path = "../core", default-features = false }
jf-relation = { path = "../relation", default-features = false }
jf-rescue = { path = "../rescue", default-features = false }
jf-utils = { path = "../utilities", default-features = false }
merlin = { workspace = true }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
rand_chacha = { workspace = true }
rayon = { version = "1.5.0", optional = true }
serde = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
tagged-base64 = { workspace = true }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-bw6-761 = { workspace = true }
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
bincode = "1.3"
criterion = "0.5.1"
hashbrown = "0.14.3"
sha2 = { version = "0.10.1" }

[[bench]]
name = "merkle_path"
harness = false

[[bench]]
name = "pcs"
harness = false
required-features = ["test-srs"]

[[bench]]
name = "pcs-size"
path = "benches/pcs_size.rs"
harness = false
required-features = ["test-srs"]

[[bench]]
name = "kzg-gpu"
path = "benches/kzg_gpu.rs"
harness = false
required-features = ["test-srs"]

[[bench]]
name = "reed-solomon"
path = "benches/reed_solomon.rs"
harness = false

[[bench]]
name = "advz"
harness = false
required-features = ["test-srs"]

[[bench]]
name = "minroot"
harness = false

[[bench]]
name = "bls-signature"
path = "benches/bls_signature.rs"
harness = false

[features]
default = ["parallel"]
std = [
        "ark-bls12-377/std",
        "ark-bls12-381/std",
        "ark-bn254/std",
        "ark-bw6-761/std",
        "ark-std/std",
        "ark-serialize/std",
        "ark-ff/std",
        "ark-ec/std",
        "ark-poly/std",
        "ark-crypto-primitives/std",
        "merlin/std",
        "num-bigint/std",
        "num-traits/std",
        "sha2/std",
        "sha3/std",
        "zeroize/std",
        "itertools/use_std",
        "rand_chacha/std",
        "jf-utils/std",
        "jf-relation/std",
        "jf-rescue/std",
        "jf-merkle-tree/std",
]
print-trace = ["ark-std/print-trace"]
kzg-print-trace = [
        "print-trace",
] # leave disabled to reduce pollution in downstream users of KZG (such as VID)
parallel = [
        "ark-ff/parallel",
        "ark-ec/parallel",
        "jf-utils/parallel",
        "jf-relation/parallel",
        "rayon",
]
test-srs = []
seq-fk-23 = [] # FK23 without parallelism
icicle = [
       "icicle-cuda-runtime",
       "icicle-core",
       "icicle-core/arkworks",
       "icicle-bn254",
       "parallel",
]
gpu-vid = ["icicle"]
