[package]
name = "jf-primitives"
description = "Cryptographic primitives"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-crypto-primitives = { version = "0.4.0", default-features = false, features = [
        "sponge",
] }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = [
        "alloc",
        "rand_core",
] }
crypto_kx = { version = "0.2.1", features = ["serde"] }
derivative = { workspace = true }
digest = { version = "0.10.1", default-features = false, features = ["alloc"] }
displaydoc = { workspace = true }
jf-merkle-tree = { path = "../merkle_tree", default-features = false }
jf-pcs = { path = "../pcs", default-features = false }
jf-primitives-core = { path = "../core", default-features = false }
jf-relation = { path = "../relation", optional = true, default-features = false }
jf-rescue = { path = "../rescue", default-features = false }
jf-signature = { path = "../signature", default-features = false, features = [ "bls", "schnorr" ] }
jf-utils = { path = "../utilities", default-features = false }
jf-vdf = { path = "../vdf", default-features = false }
jf-vid = { path = "../vid", default-features = false }
rand_chacha = { workspace = true }
rayon = { version = "1.5.0", optional = true }
serde = { workspace = true }
sha2 = { workspace = true }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
bincode = "1.3"

[features]
default = ["parallel"]
std = [
        "ark-std/std",
        "ark-serialize/std",
        "ark-ff/std",
        "ark-ec/std",
        "ark-crypto-primitives/std",
        "sha2/std",
        "zeroize/std",
        "rand_chacha/std",
        "jf-utils/std",
        "jf-relation/std",
        "jf-rescue/std",
        "jf-merkle-tree/std",
        "jf-vdf/std",
]
gadgets = [
        "jf-relation",
        "jf-rescue/gadgets",
        "jf-signature/gadgets",
        "jf-merkle-tree/gadgets",
]
print-trace = ["ark-std/print-trace", "jf-vid/print-trace"]
parallel = [
        "ark-ff/parallel",
        "ark-ec/parallel",
        "jf-utils/parallel",
        "jf-relation/parallel",
        "jf-vid/parallel",
        "jf-pcs/parallel",
        "rayon",
]
test-srs = ["jf-pcs/test-srs", "jf-vid/test-srs"]
gpu-vid = ["jf-pcs/icicle", "jf-vid/gpu-vid"]
