[package]
name = "prover-single-gpu"
version = "0.0.0"
edition = "2018"

[dependencies]
ark-std = { version = "0.3.0", features = ["parallel"] }
ark-serialize = { version = "0.3.0" }
ark-ff = { version = "0.3.0", features = ["asm", "parallel"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.3.0", features = ["curve"] }
ark-poly-commit = { git = "https://github.com/arkworks-rs/poly-commit/", rev = "cafc05e39692bbc5c383990063ad851f0b94a553", features = ["parallel"] }
jf-plonk = { path = "../plonk" }
jf-primitives = { path = "../primitives" }
jf-utils = { path = "../utilities" }
merlin = "3.0.0"
rayon = "1.5.3"
crossbeam-channel = "0.5"
once_cell = "1.15.0"
yastl = "0.1.2"
num_cpus = "1.13.1"
rust-gpu-tools = "0.6.1"
