[package]
name = "jf-relation"
description = "Jellyfish constraint system for PLONK"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = { version = "0.4.0", features = [ "asm" ] }
ark-poly = "0.4.0"
ark-serialize = "0.4.0"
ark-std = { version = "0.4.0", default-features = false }
derivative = { version = "2", features = ["use_core"] }
displaydoc = { version = "0.2.3", default-features = false }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "^1.0"
hashbrown = "0.13.2"
jf-utils = { path = "../utilities" }
num-bigint = { version = "0.4", default-features = false }
rand_chacha = { version = "0.3.1" }
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
itertools = { version = "0.10.1", default-features = false }

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", 
        "ark-ec/std", "ark-poly/std"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", 
            "jf-utils/parallel", "rayon" ]
