[package]
name = "jf-relation"
description = "Jellyfish constraint system for PLONK"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-bn254 = "0.4.0"
ark-bw6-761 = "0.4.0"
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "^1.0"
hashbrown = { workspace = true }
itertools = { workspace = true }
jf-utils = { path = "../utilities" }
num-bigint = { workspace = true }
rand_chacha = { workspace = true }
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"

[features]
default = ["parallel"]
std = ["ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std", 
        "ark-poly/std", "downcast-rs/std", "jf-utils/std", "num-bigint/std",
        "rand_chacha/std"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", 
            "jf-utils/parallel", "dep:rayon" ]
