[package]
name = "jf-relation"
description = "Jellyfish constraint system for PLONK"
version = "0.4.4"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-bw6-761 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
derivative = { workspace = true }
displaydoc = { workspace = true }
downcast-rs = { version = "1.2.0", default-features = false }
dyn-clone = "^1.0"
hashbrown = { workspace = true }
itertools = { workspace = true }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
num-bigint = { workspace = true }
rand_chacha = { workspace = true }
rayon = { version = "1.5.0", optional = true }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"

[features]
default = ["parallel"]
std = ["ark-bls12-377/std", "ark-bls12-381/std", "ark-bn254/std", "ark-bw6-761/std",
        "ark-std/std", "ark-serialize/std", "ark-ff/std", "ark-ec/std", 
        "ark-poly/std", "downcast-rs/std", "jf-utils/std", "num-bigint/std",
        "rand_chacha/std"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", 
            "jf-utils/parallel", "dep:rayon" ]
