[package]
name = "jf-rescue"
version = "0.2.0"
description = "Rescue hash function implementation."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-bls12-377/std",
    "ark-bls12-381/std",
    "ark-bn254/std",
    "ark-bw6-761/std",
    "ark-std/std",
    "ark-ff/std",
    "ark-ed-on-bls12-377/std",
    "ark-ed-on-bls12-381/std",
    "ark-ed-on-bn254/std",
    "itertools/use_std",
    "jf-utils/std",
    "jf-relation/std",
]
gadgets = ["jf-relation"]
parallel = ["jf-relation/parallel"]

[dependencies]
ark-crypto-primitives = { version = "0.5", features = ["sponge"] }
ark-bls12-377 = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-bw6-761 = { workspace = true }
ark-ed-on-bls12-377 = { workspace = true }
ark-ed-on-bls12-381 = { workspace = true }
ark-ed-on-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-std = { workspace = true }
displaydoc = { workspace = true }
itertools = { workspace = true }
jf-commitment = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-commitment-v0.2.0", default-features = false }
jf-crhf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-crhf-v0.2.0", default-features = false }
jf-prf = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-prf-v0.2.0", default-features = false }
jf-relation = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-relation-v0.5.0", optional = true, default-features = false }
jf-utils = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-utils-v0.5.0", default-features = false }
spongefish = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
ark-ed-on-bls12-381-bandersnatch = { workspace = true }
