[package]
name = "jf-signature"
version = "0.1.0"
description = "Implementation of signature schemes, including BLS and Schnorr."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
ark-std = { workspace = true }
blst = { version = "0.3.11", default-features = false }
derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
jf-crhf = { path = "../crhf", default-features = false }
jf-relation = { path = "../relation", optional = true, default-features = false }
jf-rescue = { path = "../rescue", default-features = false }
jf-utils = { path = "../utilities", default-features = false }
num-bigint = { workspace = true }
num-traits = { version = "0.2.15", default-features = false }
serde = { workspace = true }
sha3 = { workspace = true }
tagged-base64 = { workspace = true }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
ark-ed-on-bls12-377 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-ed-on-bls12-381-bandersnatch = "0.4.0"
ark-ed-on-bn254 = "0.4.0"
criterion = "0.5.1"
rand_chacha = { workspace = true }
sha2 = "0.10"

[[bench]]
name = "bls-signature"
path = "benches/bls_signature.rs"
harness = false
required-features = ["bls"]

[features]
default = []
std = [
        "ark-bls12-381/std",
        "ark-bn254/std",
        "ark-std/std",
        "ark-serialize/std",
        "ark-ff/std",
        "num-bigint/std",
        "num-traits/std",
        "sha3/std",
        "itertools/use_std",
        "jf-utils/std",
        "jf-relation/std",
        "zeroize/std",
]
schnorr = []
bls = []
gadgets = [
    "schnorr",
    "jf-relation",
    "jf-rescue/gadgets",
]
