[package]
name = "jf-traits"
version = "0.1.0"
description = "Trait definition for various cryptographic primitives."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-std = { workspace = true }
