[package]
name = "jf-utils"
description = "Utilities for Jellyfish cryptographic library"
version = "0.4.4"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }

[dependencies]
ark-ec = "^0.5"
ark-ed-on-bls12-377 = "^0.5"
ark-ed-on-bls12-381 = "^0.5"
ark-ff = "^0.5"
ark-poly = "^0.5"
ark-serialize = "^0.5"
ark-std = "^0.5"
digest = { workspace = true }
displaydoc = { workspace = true }
rand_chacha = { workspace = true }
rayon = { version = "1.5.0", optional = true }
serde = { workspace = true }
sha2 = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-377 = "^0.5"
ark-bls12-381 = "^0.5"
ark-bn254 = "^0.5"
ark-ed-on-bn254 = "^0.5"
criterion = "0.5.1"

[features]
default = []
std = [
    "ark-ff/std",
    "ark-std/std",
    "ark-ec/std",
    "ark-serialize/std",
    "ark-poly/std",
    "digest/std",
    "rand_chacha/std",
    "serde/std",
    "sha2/std",
]
parallel = [
    "ark-ff/parallel",
    "ark-std/parallel",
    "ark-ec/parallel",
    "dep:rayon",
]
