[package]
name = "jf-utils-derive"
description = "Procedural macros for deriving serialization code for Jellyfish types"
version = "0.1.0"
authors = ["Translucence Research <engineering@translucence.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
ark-serialize = { version = "0.3.0", default-features = false, features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
syn = "1.0"
quote = "1.0"

[dev-dependencies]
ark-bls12-381 = { version = "0.3.0", default-features = false, features = ["curve"] }
bincode = { version = "1.3.3", default-features = false }
jf-utils = { path = "../utilities" }
rand_chacha = { version = "0.3.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
