[package]
name = "jf-vdf"
version = "0.1.0"
description = "Verifiable delay function."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-pallas = "0.4.0"
ark-serialize = { workspace = true }
ark-std = { workspace = true }
displaydoc = { workspace = true }
jf-traits = { path = "../traits", default-features = false }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "minroot"
harness = false

[features]
default = []
std = [
    "ark-pallas/std", "ark-bls12-381/std", "ark-bn254/std", "ark-std/std",
    "ark-ff/std", "ark-ec/std",
]
