[package]
name = "jf-vid"
version = "0.2.0"
description = "Verifiable information dispersal (VID)."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[features]
default = ["parallel"]
std = [
    "ark-std/std",
    "ark-serialize/std",
    "ark-ff/std",
    "ark-ec/std",
    "ark-poly/std",
    "itertools/use_std",
    "jf-utils/std",
    "jf-pcs/std",
    "jf-merkle-tree/std",
]
test-srs = ["jf-pcs/test-srs"]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "jf-utils/parallel",
    "jf-pcs/parallel",
    "rayon",
]
seq-fk-23 = [] # FK23 without parallelism
gpu-vid = ["jf-pcs/icicle"]
print-trace = ["ark-std/print-trace"]
kzg-print-trace = [
    "print-trace",
] # leave disabled to reduce pollution in downstream users of KZG (such as VID)

[dependencies]
anyhow = "1.0"
ark-ec = "0.4"
ark-ff = "0.4"
ark-poly = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
derivative = { workspace = true }
digest = { workspace = true }
displaydoc = { workspace = true }
# not a direct dependency, but we need serde;
# inherited from digest-v0.10.7->crypto_common->generic-array
generic-array = { version = "0.14.6", features = ["more_lengths", "serde"] }
itertools = { workspace = true, features = ["use_alloc"] }
jf-merkle-tree = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
jf-pcs = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }
rayon = { version = "1.5.0", optional = true }
serde = { workspace = true }
tagged-base64 = { workspace = true }

[dev-dependencies]
ark-bls12-381 = "0.4"
ark-bn254 = "0.4"
ark-ed-on-bls12-377 = "0.4"
ark-ed-on-bls12-381 = "0.4"
ark-ed-on-bn254 = "0.4"
criterion = "0.5.1"
jf-pcs = { version = "0.1.0", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", features = ["test-srs"] }
sha2 = "0.10"

[[bench]]
name = "advz"
harness = false
required-features = ["test-srs"]

[[bench]]
name = "advz_multiplicity"
harness = false
required-features = ["test-srs"]
