[package]
name = "jf-vrf"
version = "0.2.0"
description = "Verifiable random function."
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }

[dependencies]
ark-std = { workspace = true }
digest = { version = "0.10.1", default-features = false, features = ["alloc"] }
displaydoc = { workspace = true }
jf-signature = { git = "https://github.com/EspressoSystems/jellyfish", tag = "jf-signature-v0.2.0", default-features = false, features = [ "bls" ] }
serde = { workspace = true }
sha2 = { workspace = true }
zeroize = { version = "1.5", default-features = false }

[dev-dependencies]
jf-utils = { version = "0.4.4", git = "https://github.com/EspressoSystems/jellyfish", tag = "0.4.5", default-features = false }

[features]
default = ["parallel"]
std = [
    "ark-std/std", "digest/std", "jf-signature/std", "zeroize/std",
]
parallel = ["jf-signature/parallel"]
